--- a/banner-imagem.css
+++ b/banner-imagem.css
@@ -1,4 +1,8 @@
 .banner__imagem {
     width: 100%;
     height: calc(100vh - 72px);
+    background-image: url('../../img/banner.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
 }
