--- a/cabecalho.css
+++ b/cabecalho.css
@@ -1,8 +1,16 @@
-.cabecalho {
-    align-items: center;
-    background: #F9F9F9;
+.pessoa {
     display: flex;
-    justify-content: space-between;
-    padding-left: 2rem;
-    padding-right: 2rem;
+    flex-direction: column;
+}
+
+@media screen and (min-width: 0) {
+    .pessoa {
+        margin-bottom: 2rem;
+    }
+}
+
+@media screen and (min-width: 768px) {
+    .pessoa {
+        margin-bottom: 0;
+    }
 }
