--- a/banner-imagem.css
+++ b/banner-imagem.css
@@ -6,3 +6,15 @@
     background-size: cover;
     background-position: center;
 }
+
+@media screen and (min-width: 0) {
+    .banner__imagem {
+        height: calc(100vh - 51px);
+    }
+}
+
+@media screen and (min-width: 768px) {
+    .banner__imagem {
+        height: calc(100vh - 72px);
+    }
+}
